--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/.sonar
 ### Gradle template
 .gradle
 build/
@@ -13,7 +14,7 @@ gradle-app.setting
 *.iml
 
 ## Directory-based project format:
-.idea/
+.idea/*
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
