Improve DockerFile and DockerCompose script engines
  - improve docker file & compose properties handling: allow overriding by system properties, handle windows & mac docker-compose default path, added a property to keep the docker files
  - improve docker compose script engine: run the docker-compose command in the scratch space (mandatory in non-forked mode).
  - improve docker file script engine: run the docker commands in the scratch space, use job & task ids to tag containers & images, allow to specify command line options through generic information
  - added non-mocked tests for both engines

--- a/src/test/resources/config/scriptengines/docker-compose.properties
+++ b/src/test/resources/config/scriptengines/docker-compose.properties
@@ -1,5 +1,7 @@
 # General configuration
 docker.compose.command=test-compose
+docker.compose.command.windows=test-compose-win
 docker.compose.sudo.command=test-sudo
 docker.compose.use.sudo=true
 docker.host=test-test
+docker.file.keep=false
