Improve script engine docker compose  - upgrade version  - upgrade gradle wrapper  - simplify gradle script and releasing  - docker-compose: add no-ansi option to avoid printing unreadable characters  - route log messages to script engine output  - docker-compose: make sure docker-compose down is run in the localspace directory  - add logger configuration to tests

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,3 @@
-# Another version property is in DockerComposeScriptEngineFactory!!!
-version=0.3.2
+version=0.3.3
+groupId=jsr223
+artifactId=jsr223-docker-compose
