--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ repositories {
     if (project.hasProperty('local')) {
         mavenLocal()
     }
-    jcenter()
+    mavenCentral()
     maven {
         url "https://plugins.gradle.org/m2/"
     }
