--- a/build.gradle
+++ b/build.gradle
@@ -67,7 +67,7 @@ sourceSets {
 
 dependencies {
     compile 'org.projectlombok:lombok:1.16.6'
-    compile 'log4j:log4j:1.2.17'
+    compile 'ch.qos.reload4j:reload4j:1.2.25'
     provided 'org.ow2.proactive:scheduler-api:+'
 
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.1'
